--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "echo 'Static site'",
-  "public": "./",
+  "public": true,
   "cleanUrls": true,
   "trailingSlash": false,
   "rewrites": [
